--- a/operations.html
+++ b/operations.html
@@ -534,10 +534,7 @@
   <nav>
     <div class="logo">.VLT</div>
     <div class="nav-links">
-      <button class="nav-tab active" onclick="switchModule('operations')">Operations</button>
-      <button class="nav-tab" onclick="switchModule('intelligence')">Intelligence</button>
-      <button class="nav-tab" onclick="switchModule('surveillance')">Surveillance</button>
-      <button class="nav-tab" onclick="switchModule('control')">Control</button>
+      <a href="https://paltogan.github.io/.vlt/#" target="_blank">Click me</a>
       <div class="clearance-badge">OMEGA CLEARANCE</div>
     </div>
   </nav>
