--- a/operations.html
+++ b/operations.html
@@ -533,6 +533,7 @@
 
   <nav>
     <div class="logo">.VLT</div>
+    <a href="https://paltogan.github.io/.vlt/#" target="_blank"></a>
     <div class="nav-links">
       <div class="clearance-badge">OMEGA CLEARANCE</div>
     </div>
