--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>.VLT — V.U.L.T.U.R.E. HOME</title>
   <link rel="icon" type="image/png" href="/vulture_cyan.png" />
-  <link rel="icon" type="image/png" href="vulture_cyan.png" />
+  <link rel="icon" type="image/png" href="vulture_cyan.ico" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600;700&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
 
