--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
       <a href="#" onclick="triggerGlitch()">Intelligence</a>
       <a href="#" onclick="triggerGlitch()">Surveillance</a>
       <a href="#" onclick="triggerGlitch()">Control</a>
-      <div class="security-badge">LEVEL 5</div>
+      <div class="security-badge">SECURITY CLEARANCE LVL 5</div>
     </div>
   </nav>
 
