--- a/operations.html
+++ b/operations.html
@@ -536,7 +536,7 @@
     <div class="logo">.VLT</div>
     <a href="https://paltogan.github.io/.vlt/#" target="_blank"></a>
     <div class="nav-links">
-      <div class="clearance-badge">OMEGA CLEARANCE</div>
+      <div class="clearance-badge">SECURITY CLEARANCE LVL 5</div>
     </div>
   </nav>
 
